--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ nav {
 
 #logo-box {
     float: left;
-    padding-top: 0.5rem;
+    padding-top: 2rem;
 }
 
 #logo-box .logo {
@@ -244,7 +244,7 @@ nav {
         font-size: 3rem;
     }
 
-    #nav-link.responsive li:not(:first-child) {
+    #nav-links.responsive li:not(:first-child) {
         display: none;
     }
 }
